update: swagger update for getuserinfo endpoint
