# src/routes/api/v1/user.routes.ts
@@ -2,6 +2,7 @@ import express from "express";
 import { UserController } from "../../../controllers/user/user.controller";
 import { AppDataSource } from "../../../utils/data-source";
 import { User } from "../../../entities/user/user.entity";
+import { authMiddleware } from "../../../middleware/auth.middleware";
 
 const router = express.Router();
 
@@ -9,9 +10,19 @@ const userRepository = AppDataSource.getRepository(User);
 const userController = new UserController(userRepository);
 
 router.get("/", userController.getAllUsers.bind(userController));
+
+router.get(
+  "/user",
+  authMiddleware,
+  userController.getUserInfo.bind(userController)
+);
+
 router.get("/role", userController.getUsersByRole.bind(userController));
+
 router.put("/:id", userController.updateUser.bind(userController));
+
 router.delete("/:id", userController.deleteUser.bind(userController));
+
 router.get("/:id", userController.getUserById.bind(userController));
 
 export default router;
